更新dockerfile，将模型和配置文件放在dockerfile同级目录

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 # Use Caffe2 image as parent image
 FROM caffe2:cuda8-cudnn6-all-options
 
+#RUN pip install --upgrade pip
+
 # Install Python dependencies
 RUN pip install numpy pyyaml matplotlib opencv-python>=3.0 setuptools Cython mock
 
@@ -12,6 +14,11 @@ RUN make install
 # Clone the Detectron repository
 #RUN git clone https://github.com/facebookresearch/detectron /detectron
 RUN git clone https://github.com/lg12170226/Detectron-restful /detectron
+
+
+COPY retinanet.yaml /detectron/restful/model/
+COPY model.pkl /detectron/restful/model/
+
 # Set up Python modules
 WORKDIR /detectron/lib
 RUN make
@@ -21,11 +28,11 @@ RUN make ops
 
 # Go to Detectron root
 WORKDIR /detectron
-RUN apt-get install python-pip
+
 RUN pip install --upgrade pip
 RUN pip install Flask
 
 
 WORKDIR /detectron/restful
 CMD python app.py
-
+EXPOSE 8080
